# syllabus

./: .mcp.json  .pylintrc  CLAUDE.md  README.md  justfile  pyproject.toml
.claude/skills/se/: SKILL.md
docs/: metadata.md
docs/plans/: .clasi.db  overview.md
docs/plans/sprints/001-code-quality-and-test-infrastructure/: sprint.md
docs/plans/sprints/001-code-quality-and-test-infrastructure/tickets/: 002-remove-dead-code-and-simplify-version-detection.md  003-add-type-hints-to-sync-py-and-util-py.md  004-improve-error-messages-and-add-pre-operation-validation.md  007-fix-f-option-in-test-scripts.md
docs/plans/todo/: fix-f-option-in-test-scripts.md  replace-makefile-with-justfile.md
docs/plans/todo/done/: add-automated-tests.md  add-type-hints.md  extract-display-modules-to-config.md  improve-error-messages.md  improve-readme.md  remove-unimplemented-path-map.md  simplify-version-detection.md  update-pylint-config.md  validate-directory-structure-before-operations.md
src/syllabus/: __init__.py  models.py  sync.py  util.py
src/syllabus/cli/: main.py
test/: conftest.py  justfile  syllabus.yaml  test.ipynb  test_cli.py  test_models.py  test_sync.py  test_util.py
test/Turtles/: 04c_Turtle_Tricks.py
test/golden/: lessons-source-syllabus.yaml  simple-source-renumber100-listing.txt  simple-source-syllabus.yaml
test/lessons-source/: README.md
test/simple-source/: README.md
test/simple-source/10_Basics/: 10_Hello.py  20_Variables.md  README.md
test/simple-source/20_Advanced/: 10_Functions.py  20_Classes.py  README.md
(+7 files in other folders)
