[project]
name = "syllabus"
version = "0.1.0"
description = "Course management system"
readme = "README.md"
authors = [
    { name = "Eric Busboom", email = "eric.busboom@jointheleague.org" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "pydantic>=2.10.6",
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
syl = "syllabus.cli.main:run"
